2011-10-23  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (h_skip): Bugfix: bad agument list in debugf call.

2011-10-22  Kaz Kylheku  <kaz@kylheku.com>

	Task #11474

	* filter.c (filter_equal): Takes two filters instead of one.
	(lfilt_k, rfilt_k): New keyword variables.
	(filter_init): New keyword variables initialized.

	* filter.h (filter_equal): Declaration updated.
	(lfilt_k, rfilt_k): Declared.

	* lib.c (funcall4): New function.
	(do_curry_1234_34): New static function.
	(curry_1234_34): New function.
	(do_swap_12_21): New static function.
	(swap_12_21): New function.

	* lib.h (funcall4, curry_1234_34, swap_12_21): Declared.

	* match.c (dest_bind): Swap use the function argument swapping
	combinator when calling tree find such that the value
	being searched is on the left and pattern material is on the right.
	(v_bind): Implemented :lfilt and :rfilt.

	* txr.1: Documented :lfilt and :rfilt.

2011-10-22  Kaz Kylheku  <kaz@kylheku.com>

	* filter.c (get_filter_trie): Function renamed to get_filter. A filter
	is not necessarily a trie.
	(string_filter, compound_filter): New functions.
	(get_filter): Recognize a compound filters and return a function
	which implements it.

	* filter.h (get_filter_trie): Declaration renamed.

	* match.c (format_field, v_bind, v_output): Follow get_filter_trie
	rename. Error message text updated.

	* txr.1: Describe compound filters.

2011-10-22  Kaz Kylheku  <kaz@kylheku.com>

	Task #11474

	* filter.c (filter_equal): New function.
	(upcase_k, downcase_k): New keyword variables.
	(filter_init): New keyword variables initialized,
	and new upcase and downcase filters registered.

	* filter.h (filter_equal): Declared.

	* lib.c (tree_find): Takes new argument, the equality test function.
	(upcase_str, downcase_str): New functions.
	(do_curry_123_23): New static function.
	(curry_123_23): New function.

	* lib.h (tree_find): Declaration updated.
	(upcase_str, downcase_str, curry_123_23): Declared.
